--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-#Install
+# Instalasi dependencies
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
-#Menjalankan
+# Menjalankan pengujian
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'test']
-#Deploy
-- name: 'gcr.io/cloud-builders/npm'
+# Deploy aplikasi ke App Engine
+- name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
